--- a/app/views/reu_program/applications/index.haml
+++ b/app/views/reu_program/applications/index.haml
@@ -8,6 +8,12 @@
         %button.btn.btn-light.float-right= link_to 'Export All as PDF', reu_program_applications_path(format: 'pdf')
   .row
     .col
+      .btn-group.mb-3
+        - Application.states.each do |state|
+          - s = state.first
+          = link_to s.capitalize, reu_program_applications_path(state: s), class: "btn btn-outline-#{status_class(s)} #{'active' if s == params[:state]}"
+  .row
+    .col
       %table.table
         %thead
           %tr
