setup application defaults better

--- a/app/views/applications/show_application.haml
+++ b/app/views/applications/show_application.haml
@@ -6,7 +6,7 @@
       style: "display: none;",
       data: {
         schema: @form.json_schema,
-        data: JSON.generate(current_application&.data || {}),
+        data: JSON.generate(@data),
         path: application_path,
         method: 'PATCH'
       }
