make devise views consistent

--- a/app/views/users/confirmations/new.haml
+++ b/app/views/users/confirmations/new.haml
@@ -1,17 +1,18 @@
 .row
   .col-3
   .col-6
-    %h2 Resend confirmation instructions
-    = simple_form_for(resource, as: resource_name, url: confirmation_path(resource_name), html: { method: :post }) do |f|
-      = f.error_notification
-      = f.full_error :confirmation_token
-      .form-inputs
-        = f.input :email,                                                                          |
-          required: true,                                                                          |
-          autofocus: true,                                                                         |
-          value: (resource.pending_reconfirmation? ? resource.unconfirmed_email : resource.email), |
-          input_html: { autocomplete: "email" }                                                    |
-      .form-actions
-        = f.button :submit, "Resend confirmation instructions", class: 'btn btn-primary'
-    = render "users/shared/links"
+    .card
+      .card-header
+        %h4 Resend confirmation instructions
+      .card-body
+        = simple_form_for(resource, as: resource_name, url: confirmation_path(resource_name), html: { method: :post }) do |f|
+          = render 'devise/shared/error_messages', resource: resource
+          = f.input :email,                                                                          |
+            required: true,                                                                          |
+            autofocus: true,                                                                         |
+            value: (resource.pending_reconfirmation? ? resource.unconfirmed_email : resource.email), |
+            input_html: { autocomplete: 'email' }                                                    |
+          = f.button :submit, 'Resend confirmation instructions', class: 'btn btn-primary'
+          .mt-4
+            = render 'users/shared/links'
   .col-3
