--- a/app/views/users/registrations/new.haml
+++ b/app/views/users/registrations/new.haml
@@ -1,23 +1,24 @@
 .row
   .col-3
   .col-6
-    %h2 Sign up
-    = simple_form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f|
-      = f.error_notification
-      .form-inputs
-        = f.input :email,
-          required: true,
-          autofocus: true,
-          input_html: { autocomplete: "email" }
-        = f.input :password,
-          required: true,
-          hint: ("#{@minimum_password_length} characters minimum" if @minimum_password_length),
-          input_html: { autocomplete: "new-password" }
-        = f.input :password_confirmation,
-          required: true,
-          input_html: { autocomplete: "new-password" }
-      .form-actions
-        = f.button :submit, "Sign up", class: 'btn btn-primary'
-    .mt-4
-      = render "users/shared/links"
+    .card
+      .card-header
+        %h4 Sign up
+      .card-body
+        = simple_form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f|
+          = f.error_notification
+          = f.input :email,
+            required: true,
+            autofocus: true,
+            input_html: { autocomplete: "email" }
+          = f.input :password,
+            required: true,
+            hint: ("#{@minimum_password_length} characters minimum" if @minimum_password_length),
+            input_html: { autocomplete: "new-password" }
+          = f.input :password_confirmation,
+            required: true,
+            input_html: { autocomplete: "new-password" }
+          = f.button :submit, "Sign up", class: 'btn btn-primary'
+        .mt-4
+          = render "users/shared/links"
   .col-3
