seti fext fixes

--- a/app/views/applicants/academic_records/_interest_fields.html.erb
+++ b/app/views/applicants/academic_records/_interest_fields.html.erb
@@ -30,14 +30,16 @@
 
   <div class="panel-heading">Background and Goals</div>
   <div class="panel-body">
+    <p>Your statements are likely to be more effective if they are shorter than 400 words.</p>
+
     <%= f.label :personal_statement, "Personal Statement" %>
-    <%= f.text_area :statement, :class => 'form-control', :rows => 2, :placeholder => " Please describe your career goals, how your background has shaped your goals and prepared you to meet your goals, and how a SETI Institute REU internship fits into your plan."  %>
+    <%= f.text_area :statement, :class => 'form-control', :rows => 2, :placeholder => "Please describe your career goals, how your background has shaped your goals and prepared you to meet your goals, and how a SETI Institute REU internship fits into your plan."  %>
 
     <%= f.label :facing_challenges_experience, "Facing Challenges Experience" %>
     <%= f.text_area :facing_challenges_experience, :class => 'form-control', :rows => 2, :placeholder => "Please write about an experience of overcoming adversity or an obstacle in your life.  For tips, see the short (1.5 minutes) video at https://www.youtube.com/watch?v=p7HFxWI6YVg"  %>
 
     <%= f.label :research_experience, "Research Experience" %>
-    <%= f.text_area :research_experience, :class => 'form-control', :rows => 2, :placeholder => " Please describe any research or related experience.  Please be aware that you may have a competitive application, even without research experience."  %>
+    <%= f.text_area :research_experience, :class => 'form-control', :rows => 2, :placeholder => "Please describe any research or related experience.  Please be aware that you may have a competitive application, even without research experience."  %>
 
     <%= f.label :leadership_experience, "Leadership Experience" %>
     <%= f.text_area :leadership_experience, :class => 'form-control', :rows => 2, :placeholder => "Please describe one or more times in your life where you needed to exercise leadership (it does not need to be academic)."  %>
