--- a/app/views/applicants/academic_records/_record_fields.html.erb
+++ b/app/views/applicants/academic_records/_record_fields.html.erb
@@ -20,7 +20,7 @@
   <div class="inner">
     <%= f.label :transcript %>
     <p>Attach a PDF or image of your transcript.</p>
-    <p>It is sufficient for your institution’s registrar to send you a copy of your transcript, and for you to send it to us.  This is also known as an ‘unofficial transcript.</p>
+    <p>It is sufficient for your institution’s registrar to send you a copy of your transcript, and for you to send it to us.  This is also known as an "unofficial transcript".</p>
     <%= f.file_field :transcript %>
     <%= content_tag :p, raw("Current attachment: #{link_to current_applicant.records.find_by_applicant_id(current_applicant).transcript_file_name, current_applicant.records.find_by_applicant_id(current_applicant).transcript.url}") unless f.object.new_record?  %>
   </div>
