updates contact email

--- a/app/views/welcome/pricing.haml
+++ b/app/views/welcome/pricing.haml
@@ -27,4 +27,4 @@
     .card.mb-3
       .card-header
         %h3.card-title Do you have questions? Would you like to sign up for our service?
-      %a.btn.btn-primary.center{:href => "mailto:crystal@notch8.com", :role => "button"} Contact us for more info
+      %a.btn.btn-primary.center{:href => "mailto:connect@notch8.com", :role => "button"} Contact us for more info
