add headers to admin pages

--- a/app/views/reu_program/recommender_forms/index.haml
+++ b/app/views/reu_program/recommender_forms/index.haml
@@ -1,6 +1,9 @@
 .container
   .row
     .col
+      %h2 Recommender/Recomendation Forms
+  .row
+    .col
       %table.table
         %thead
           %tr
