show acknowledgment of funding sources snippet

--- a/app/views/welcome/index.haml
+++ b/app/views/welcome/index.haml
@@ -54,3 +54,8 @@
   .col
     %h3 Application Information
     = sanitize(Snippet[:application_information])
+
+.row.mt-4
+  .col
+    %h3 Acknowledgment Of Funding Sources
+    = Snippet[:Acknowledgment_of_funding_sources]
